# fylearn

./: .gitignore  .python-version  .travis.yml  LICENSE  LICENSE.txt  Makefile  README.md  codecov.yml  friedman.py  friedman2.py  goodfunctions.py  hello-test.py  iterations.py  pyproject.toml  pytest.ini  requirements.txt  results.py  results2.py  setup.cfg  setup.py  stats.py  test-fparr-ga.py  test-frr.py  test-iterations.py  test.py  traintestdiff.py
.ci/: versioning.py
.dependabot/: config.yml
.github/: dependabot.yml  renovate.json
.github/workflows/: build.yml  cibuildwheel.yml  codeql-analysis.yml  renovate.yml
fylearn/: __init__.py  anfis.py  fpcga.py  fpt.py  frr.py  frrga.py  fuzzylogic.py  ga.py  garules.py  jaya.py  local_search.py  metrics.py  ncknn.py  nfpc.py  nonstationary.py  raefrr.py  rafpc.py  tlbo.py
fylearn/tests/: fpt.py  iris.csv  test_fpcga.py  test_fpt.py  test_frr.py  test_fuzzylogic.py  test_ga.py  test_garules.py  test_garules_ensemble.py  test_jaya.py  test_local_search.py  test_nfpc.py  test_nonstationary.py  test_rafpc.py  test_tlbo.py
paper/: __init__.py  balance-scale.csv  breast-w.csv  bupa.csv  column_2C.csv  glass.csv  haberman.csv  indian-liver.csv  ionosphere.csv  vowel.csv  wine.csv
tests/: diabetes.csv  test_anfis.py  test_fpcga.py  test_fpcowa.py  test_fpt.py  test_frr.py  test_fuzzylogic.py  test_ga.py  test_garules.py  test_garules_ensemble.py  test_local_search.py  test_metrics.py  test_nfpc.py  test_nonstationary.py  test_rafpc.py  test_tlbo.py
