[build-system]
requires = [
  "flit_scm",
]
build-backend = "flit_scm:buildapi"


[project]
name = "fylearn"
maintainers = [
  {name = "Søren Atmakuri Davidsen", email = "soren@atmakuridavidsen.com"},
]
description = "Fuzzy Machine Learning Algorithms"
readme = {file = "README.md", content-type = "text/markdown"}
classifiers = [
  'Operating System :: OS Independent',
  'License :: OSI Approved :: MIT License',
  'Programming Language :: Python :: 3.12',
  'Topic :: Scientific/Engineering :: Artificial Intelligence',
  'Topic :: Scientific/Engineering :: Information Analysis',
  'Intended Audience :: Science/Research',
  'Intended Audience :: Education',
  'Intended Audience :: Developers',
]

dependencies = [
  'numpy>=1.17',
  'scipy>=1.3',
  'scikit-learn>=0.22',
]

dynamic = ["version"]

[project.urls]
Repository = "https://github.com/sorend/fylearn.git"
Issues = "https://github.com/sorend/fylearn/issues"

[project.optional-dependencies]
dev = [
  "tox",
  "tox-gh-actions",
]

[tool.flit.sdist]
exclude = [".gitignore"]

[tool.setuptools_scm]
version_file = "fylearn/_version.py"
