[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "fylearn"
maintainers = [
  {name = "Søren Atmakuri Davidsen", email = "soren@atmakuridavidsen.com"},
]
description = "Fuzzy Machine Learning Algorithms"
readme = {file = "README.md", content-type = "text/markdown"}
classifiers = [
  'Operating System :: OS Independent',
  'License :: OSI Approved :: MIT License',
  'Programming Language :: Python :: 3.12',
  'Topic :: Scientific/Engineering :: Artificial Intelligence',
  'Topic :: Scientific/Engineering :: Information Analysis',
  'Intended Audience :: Science/Research',
  'Intended Audience :: Education',
  'Intended Audience :: Developers',
]
keywords=['machine learning', 'fuzzy logic', 'scikit-learn','fuzzy systems']

dependencies = [
  'numpy>=1.17',
  'scipy>=1.3',
  'scikit-learn>=0.22',
]

dynamic = ["version"]

[project.urls]
Repository = "https://github.com/sorend/fylearn.git"
Issues = "https://github.com/sorend/fylearn/issues"

[project.optional-dependencies]
dev = [
  "tox",
  "tox-gh-actions",
]

[tool.flit.sdist]
exclude = [".gitignore", ".github", ".ci", "codecov.yml", "Makefile"]

[tool.pytest.ini_options]
addopts = "-v --cov-fail-under=60 --cov=fylearn"
testpaths = [
  "tests",
]
