[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
bump = true

[project]
name = "fylearn"
maintainers = [
  {name = "Søren Atmakuri Davidsen", email = "soren@atmakuridavidsen.com"},
]
dynamic = ["version"]
description = "Fuzzy Machine Learning Algorithms"
readme = {file = "README.md", content-type = "text/markdown"}
license = { text = "MIT" }
requires-python = ">=3.12"
classifiers = [
  'Operating System :: OS Independent',
  'License :: OSI Approved :: MIT License',
  'Programming Language :: Python :: 3.12',
  'Topic :: Scientific/Engineering :: Artificial Intelligence',
  'Topic :: Scientific/Engineering :: Information Analysis',
  'Intended Audience :: Science/Research',
  'Intended Audience :: Education',
  'Intended Audience :: Developers',
]
keywords=['machine learning', 'fuzzy logic', 'scikit-learn','fuzzy systems']

dependencies = [
  'numpy>=1.17',
  'scipy>=1.3',
  'scikit-learn>=0.22',
]

[project.urls]
Repository = "https://github.com/sorend/fylearn.git"
Issues = "https://github.com/sorend/fylearn/issues"

[dependency-groups]
dev = [
  "tox",
  "tox-gh-actions",
  "versiontag>=1.2.0",
]

[tool.ruff.lint]
select = ["C4", "E", "F", "I", "PERF", "UP"]
ignore = ["PERF203"]

[tool.ruff]
line-length = 120
target-version = "py312"

#[tool.ruff.lint.per-file-ignores]
#"__init__.py" = ["F401"]
#"tests/server/fastmcp/test_func_metadata.py" = ["E501"]

[tool.pytest.ini_options]
addopts = "-v --cov-fail-under=60 --cov=fylearn"
testpaths = [
  "tests",
]
