[metadata]
description-file = README.md

[aliases]
test = pytest

[flake8]
max-line-length = 120
exclude = .git, setup.py, __pycache__, tests

[tox:tox]
envlist = clean, py38, py39, coverage

[gh-actions]
python =
    3.8: py38
    3.9: py39, coverage

[testenv]
deps =
     pytest
     pytest-cov
changedir = tests
commands = pytest {posargs}

[testenv:clean]
deps = coverage
skip_install = true
commands = coverage erase

[testenv:coverage]
passenv = TOXENV CI TRAVIS TRAVIS_* CODECOV_*
deps = codecov
skip_install = true
commands = codecov
