[metadata]
description-file = README.md

[aliases]
test = pytest

[flake8]
max-line-length = 120
exclude = .git, setup.py, __pycache__, tests

[tox:tox]
envlist = clean, py312, py313, py314, coverage

[gh-actions]
python =
    3.12: py312, coverage
    3.13: py313
    3.14-dev: py314

[testenv]
deps =
     pytest
     pytest-cov
commands = pytest {posargs}

[testenv:clean]
deps = coverage
skip_install = true
commands = coverage erase

[testenv:coverage]
passenv = TOXENV,CI,GITHUB,GITHUB_*,CODECOV_*
deps = codecov
skip_install = true
commands = codecov
